Add javaFX to AgentSmith