@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'application'
     id 'com.github.johnrengelman.shadow' version '7.1.2'
+    id 'checkstyle'
 }
 
 repositories {
@@ -11,6 +12,12 @@ repositories {
 dependencies {
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.10.0'
     testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.10.0'
+
+    def javafxVersion = '21.0.2'
+    def javafxModules = ['javafx-controls', 'javafx-fxml']
+    javafxModules.each { module ->
+        implementation "org.openjfx:${module}:${javafxVersion}"
+    }
 }
 
 test {
@@ -28,7 +35,7 @@ test {
 }
 
 application {
-    mainClass.set("agentsmith.AgentSmith")
+    mainClass.set("agentsmith.Launcher")
 }
 
 shadowJar {
@@ -36,6 +43,15 @@ shadowJar {
     archiveClassifier = null
 }
 
-run{
+run {
     standardInput = System.in
+    jvmArgs += [
+            '--module-path', configurations.runtimeClasspath.asPath,
+            '--add-modules', 'javafx.controls,javafx.fxml'
+    ]
+}
+
+checkstyle {
+    toolVersion = '11.0.0'
+    configFile = file('config/checkstyle/checkstyle.xml')
 }
